@@ -1,5 +1,5 @@
 package Test::Selenium::Remote::WebElement;
-$Test::Selenium::Remote::WebElement::VERSION = '0.19'; # TRIAL
+$Test::Selenium::Remote::WebElement::VERSION = '0.19';
 # ABSTRACT: A sub-class of L<Selenium::Remote::WebElement>, with several test-specific method additions.
 
 use parent 'Selenium::Remote::WebElement';
